InitClass change to reflection